snake game done

--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="gameContainer">
+		<canvas id="board"></canvas>
+	   </div>
+	   <h2>Score-Card</h2>
+	   <p id="score-card"></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
